<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_appearance">

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/tile_white"
            android:key="key_tile_white"
            android:title="White Tile Color"
            app:cpv_colorShape="square"
            app:cpv_showAlphaSlider="false" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/tile_black"
            android:key="key_tile_black"
            android:title="Black Tile Color"
            app:cpv_colorShape="square"
            app:cpv_showAlphaSlider="false" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/tile_possible"
            android:key="key_tile_possible"
            android:title="Possible Tile Color"
            app:cpv_colorShape="square"
            app:cpv_showAlphaSlider="true" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/tile_last_moved"
            android:key="key_tile_last_moved"
            android:title="Last Moved Tile Color"
            app:cpv_colorShape="square"
            app:cpv_showAlphaSlider="true" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/king_in_check"
            android:key="key_king_in_chess"
            android:title="King In Chess Color"
            app:cpv_colorShape="circle"
            app:cpv_showAlphaSlider="true" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="key_show_coordinates"
            android:title="Show Coordinates"
            app:icon="@drawable/ic_pref_coords" />

        <Preference
            android:key="key_reset_appearance"
            android:title="Reset Appearance" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_difficulty">

        <SeekBarPreference
            android:key="key_search_depth"
            android:max="13"
            android:summary="@string/pref_search_depth_desc"
            android:title="@string/pref_search_depth"
            app:defaultValue="4"
            app:icon="@drawable/ic_pref_search"
            app:min="2"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="key_quiet_search"
            android:summary="@string/pref_quiet_search_desc"
            android:title="@string/pref_quiet_search"
            app:icon="@drawable/ic_pref_quiet_search" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_other">

        <SeekBarPreference
            android:key="key_thread_count"
            android:summary="@string/pref_thread_count_desc"
            android:title="@string/pref_thread_count"
            app:icon="@drawable/ic_pref_thread_count"
            app:isPreferenceVisible="false"
            app:min="1"
            app:showSeekBarValue="true" />

        <EditTextPreference
            android:inputType="number"
            android:key="key_cache_size"
            android:summary="@string/pref_cache_size_desc"
            android:title="@string/pref_cache_size"
            app:icon="@drawable/ic_pref_cache" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_about">

        <Preference
            android:key="key_about_author"
            android:summary="TheLuckyCoder"
            android:title="@string/about_author"
            app:icon="@drawable/ic_pref_author" />

        <Preference
            android:key="key_about_source_code"
            android:title="@string/about_source_code"
            app:icon="@drawable/ic_pref_source_code" />

        <Preference
            android:key="key_about_licenses"
            android:summary="@string/about_licenses_desc"
            android:title="@string/about_licenses"
            app:icon="@drawable/ic_pref_licenses" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_debug">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_show_debug_basic"
            android:summary="@string/pref_debug_basic_desc"
            android:title="@string/pref_debug_basic"
            app:icon="@drawable/ic_pref_debug_info" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="key_show_debug_basic"
            android:key="key_show_debug_advanced"
            android:summary="@string/pref_debug_advanced_desc"
            android:title="@string/pref_debug_advanced"
            app:icon="@drawable/ic_pref_stats" />

        <Preference
            android:dependency="key_show_debug_basic"
            android:key="key_perft_test"
            android:title="Execute Perft Test" />

        <Preference
            android:dependency="key_show_debug_basic"
            android:key="key_evaluation_test"
            android:title="Execute Evaluation Test" />

    </PreferenceCategory>

</PreferenceScreen>
