<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="FEN"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/side"
        android:textSize="17sp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tg_side"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:weightSum="2"
        app:checkedButton="@id/btn_side_white"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_side_white"
            style="@style/Widget.Button.OutlinedButton.IconOnly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/side_white"
            app:backgroundTint="@color/background_side_white"
            app:icon="@drawable/w_king"
            app:iconGravity="textStart"
            app:iconSize="52dp"
            app:iconTint="@null"
            app:strokeWidth="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_side_black"
            style="@style/Widget.Button.OutlinedButton.IconOnly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/side_black"
            app:backgroundTint="@color/background_side_black"
            app:icon="@drawable/b_king"
            app:iconGravity="textStart"
            app:iconSize="52dp"
            app:iconTint="@null"
            app:strokeWidth="0dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_load"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:text="@string/action_load" />

    </LinearLayout>

</LinearLayout>